k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: raizes-api
  namespace: raizes-api
  labels:
    app: raizes-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: raizes-api
  template:
    metadata:
      labels:
        app: raizes-api
    spec:
      containers:
        - name: raizes-api
          image: uilsoneto/raizes-api:1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /app/data
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 10
            failureThreshold: 5
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: raizes-data-pvc
