k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: raizes-api
  namespace: raizes-api
spec:
  selector:
    app: raizes-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
