k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: raizes-api
  namespace: raizes-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - raizes-api.uilson.com
      secretName: raizes-api-tls
  rules:
    - host: raizes-api.uilson.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: raizes-api
                port:
                  number: 80
